Описание API и обработчики исправлены для соответствия друг другу
